fixed issues that prevented compilation